--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -69,7 +69,7 @@ jobs:
         with:
           context: ./docker/icinga-server
           file: ./docker/icinga-server/Dockerfile
-          platforms: linux/amd64,linux/arm/v7
+          platforms: linux/arm/v7
           push: true
           tags: ${{ steps.build-prep.outputs.tags }}
 
