--- a/bases/icinga-server.yaml
+++ b/bases/icinga-server.yaml
@@ -61,6 +61,7 @@ spec:
             - curl -s https://localhost:5665/v1/status --insecure | grep -q Unauthorized
           initialDelaySeconds: 5
           periodSeconds: 5
+          failureThreshold: 3
         livenessProbe:
           exec:
             command:
@@ -69,6 +70,7 @@ spec:
             - icinga2 daemon -C
           initialDelaySeconds: 10
           periodSeconds: 5
+          failureThreshold: 3
       volumes:
       - name: ido-pgsql
         secret:
