--- a/bases/icinga-server.yaml
+++ b/bases/icinga-server.yaml
@@ -62,6 +62,7 @@ spec:
           initialDelaySeconds: 5
           periodSeconds: 5
           failureThreshold: 3
+          timeoutSeconds: 4
         livenessProbe:
           exec:
             command:
@@ -71,6 +72,7 @@ spec:
           initialDelaySeconds: 10
           periodSeconds: 5
           failureThreshold: 3
+          timeoutSeconds: 4
       volumes:
       - name: ido-pgsql
         secret:
