--- a/secondary/certificate.yaml
+++ b/secondary/certificate.yaml
@@ -3,7 +3,7 @@ kind: Certificate
 metadata:
   name: icinga-sec-thesniderpad-com
 spec:
-  secretName: icinga-sec-thesniderpad-com-tls
+  secretName: icinga-sec-thesniderpad-com-tls  # pragma: allowlist secret
   issuerRef:
     name: letsencrypt-prod
     kind: ClusterIssuer
