--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -18,9 +18,9 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
-        with:
-          python-version: '3.8'
-      - uses: pre-commit/action@v2.0.0
+        # with:
+        #   python-version: '3.9'
+      - uses: pre-commit/action@v2.0.3
 
   gitleaks:
     runs-on: ubuntu-latest
